# summer-of-haskell

./: .gitignore  .travis.yml  README.md  cabal.project  deploy.sh  stack.yaml  summer-of-haskell.cabal
archive/: 2016-index.html
content/: contact.md  faq.md  ideas.html  index.md  news.html  parquet-support-for-dataframe.md  stipend.md  tips.md
content/ideas/: GHC.md  HsYAML-improvements.md  SIMD.md  accelerate-automatic-differentiation.md  accepted-ghc-proposals.md  algebraic-graphs.md  alpaca.md  array-primops.md  auto-etl.md  better-profiling-for-ghc.md  brick-widgets.md  cabal-audit-vulnerable-dependencies.md  cabal-check.md  cabal-errors.md  cabal-filter.md  cabal-gc.md  cabal-grammar.md  cabal-multiple-libraries.md  cabal-new-build.md  cabal-nix-workflow.md  cabal-package-collections.md  cabal-project-semantics.md  casesplit.md  chrome-devtools-protocol.md  ci-log-explorer.md  code-action-resolve.md  code-world.md  codecrafters.md  codeworld-update.md  codeworld.md  dhall-documentation-generator.md  dhall-toml.md  dhall.md  djinn-intero.md  dynamic-lsp-capabilities.md  enhance-large-eventlog-handling-threadscope.md  eventlog-profiling.md  faster-factorization.md  format-preserving-yaml.md  galois-cabal.md  (+85 more)
content/news/: 2016-12-08-2016-wrapup.md  2017-02-28-2017-announce.md  2017-04-05-getting-ready.md  2017-04-25-student-applications-open.md  2017-05-24-accepted-projects.md  2017-08-04-midterm-update.md  2017-09-15-final-results.md  2017-12-25-call-for-ideas.md  2018-03-14-student-applications.md  2018-04-23-accepted-projects.md  2018-09-01-final-results.md  2018-12-28-call-for-ideas.md  2019-02-26-accepted-for-gsoc.md  2019-05-28-alga-introduction.md  2019-05-29-alga-introduction.md  (+12 more)
docs/: contact.html  faq.html  ideas.html  index.html  news.html
src/: Main.hs
style/: style.css
templates/: default.html  news.html
(+4 files in other folders)
