Name:                summer-of-haskell
Version:             0.1.0.0
Synopsis:            Website for the Summer of Haskell
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
-- Copyright:           
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Executable summer-of-haskell
  Main-is:             Main.hs
  Ghc-options:         -Wall
  Hs-source-dirs:      src
  Default-language:    Haskell2010

  Build-depends:
    base         >= 4    && < 5,
    filepath     >= 1.4  && < 1.5,
    hakyll       >= 4.10 && < 4.11,
    pandoc       >= 2.0  && < 2.1,
    pandoc-types >= 1.17 && < 1.20
