Name:                summer-of-haskell
Version:             0.1.0.0
Synopsis:            Website for the Summer of Haskell
Description:         Website for the Summer of Haskell.
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:           2016 - 2018 Haskell.Org Committee
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/haskell-org/summer-of-haskell.git

Executable summer-of-haskell
  Main-is:             Main.hs
  Ghc-options:         -Wall
  Hs-source-dirs:      src
  Default-language:    Haskell2010

  Build-depends:
    base         >= 4.8  && < 5,
    filepath     >= 1.4  && < 1.5,
    hakyll       >= 4.10 && < 4.14,
    pandoc       >= 2.10 && < 2.11,
    pandoc-types >= 1.17 && < 1.22
